# just-trade-it

./: .flake8  .gitignore  .isort.cfg  FB.csv  MSFT.csv  README.md  Untitled.ipynb  analysis.ipynb  backtest.ipynb  noxfile.py  setup.cfg  setup.py  testing.ipynb
.circleci/: config.yml
notebooks/: analysis.ipynb  backtest.ipynb  create_img.ipynb  enrich_stocks.ipynb  ml.ipynb  screener.ipynb
notebooks/logs/: extreme_rsi_screener.txt  model_thresh_70.pkl
pytrader/analysis/: analysis.py
pytrader/analyzer/: __init__.py  analyze.py
pytrader/backtester/: __init__.py
pytrader/constants/: constants.py
pytrader/indicators/: __init__.py
pytrader/optimization/: analysis.py  dataset.py  ml.py
pytrader/patterns/: pattern_interface.py  reversal_patterns.py
pytrader/risk/: __init__.py  management.py
pytrader/strategies/: __init__.py  bouncing.py  utils.py
t_nachine/backtester/: __init__.py
t_nachine/candlesticks/: candle.py
t_nachine/constants/: __init__.py  constants.py  trades_attributes.py
t_nachine/indicators/: __init__.py
t_nachine/intrinsic_value/: __init__.py  compute.py  data_loader.py  dcf.py  protocol.py
t_nachine/patterns/: __init__.py  bull_bear_pattern.py  pattern_interface.py  reversal_patterns.py
t_nachine/risk/: management.py
t_nachine/strategies/: __init__.py  bouncing.py  extreme_rsi.py  random.py  utils.py
tests/candlesticks/: test_candle.py
tests/risk/: test_management.py
tests/strategies/: test_candle.py
tradeit/: __init__.py
tradeit/backtester/: __init__.py
tradeit/indicators/: indicator.py
(+103 files in other folders)
