[metadata]
version = attr: t_nachine.__init__.__version__
[zest.releaser]
create-wheel = yes
extra-message = [skip ci]
python-file-with-version = t_nachine/__init__.py
release = yes

[aliases]
test = pytest
[tool: pytest]
adopts = --cov-fail-under 0 --cov-report html:dist/coverage --cov=t_nachine

[mypy]
warn_unused_ignores = True
warn_redundant_casts = True
ignore_missing_imports = True

[coverage:run]
parallel = 1
concurrency =
    multiprocessing
source =
    t_nachine
omit =

[coverage:report]
exclude_lines =
    ^\s*continue\b
    ^\s*return\b
    ^\s*raise\b
    ^\s*except\b
    ^\s*warnings\.warn\(
    ^\s*warn\(